# forge

./: .gitignore  .loopkit.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  forge-perfect-loop-plan.md  install.sh  opencode.json  package.json  project.constraints.yaml  tsconfig.json
.claude/: plan.md
agents/: architect-agent.md  developer-agent.md  devops-agent.md  po-agent.md  qa-agent.md  secops-agent.md  ux-agent.md
docs/: anti-slop.md  graph-engine-implementation.md  graph-engine.md  inception.loop.md  iteration-board.loop.md
integrations/: browser-use.sh  graphify.sh  headroom.sh  ui-ux-pro-max.sh
scripts/: push.sh
src/: config.ts  linear-client.ts  mcp-client.ts  (+4 more)
tools/contract-tests/: Cargo.toml  README.md
tools/contract-tests/fixtures/: loop-contract.yaml
tools/contract-tests/src/: diagnostic.rs  lib.rs  main.rs  repo.rs  types.rs
tools/contract-tests/src/parser/: constraints.rs  handoff.rs  mod.rs  readme.rs  skill.rs  yaml.rs
tools/contract-tests/src/simulation/: mod.rs
tools/contract-tests/src/validators/: bidirectional_state.rs  constraints_loop_block.rs  cross_references.rs  fixture_category.rs  fixture_drift.rs  handoff_completeness.rs  handoff_graph.rs  loop_completeness.rs  loop_section_order.rs  loop_sections.rs  loop_state_files.rs  mod.rs  simulation.rs  skill_completeness.rs  state_machine.rs
tools/contract-tests/tests/: cli_tests.rs  diagnostic_tests.rs  integration.rs  parser_tests.rs  validator_tests.rs
tools/contract-tests/tests/common/: mod.rs
tools/contract-tests/tests/fixtures/: canonical-loop-contract.yaml
(+254 files in other folders)
